# mbras-c2s-enrichment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  Dockerfile  GITHUB_SETUP_GUIDE.md  IMPROVEMENTS_TO_100.md  README.md  SECURITY_CHECKLIST.md  docker-compose.test.yml  docker-compose.yml  fly.toml  google-ads.yaml.example  openapi.yml  test_all_endpoints_v2.sh  test_final_results.sh  test_performance.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+3 more)
.sqlx/: query-5ca56a5aa417f529bce0fec6772a23c52640669993af135b67ccdc13b42463a5.json  query-8a2022d05415b3b95738c9fccae7e5dcdb7fce0c81c86f501670d821af2099dc.json
docs/: AGENTS.md  API_ENDPOINTS.md  C2S_WEBHOOK_CONFIGURATION.md  DATABASE_HARDENING_COMPLETE.md  DEDUPLICATION_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  ENRICHMENT_INTEGRATION.md  FINAL_STATUS.md  GOOGLE_ADS_INTEGRATION.md  MAKE_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PLAN_ON_CLOSE_LEAD.md  QUICKSTART.md  README.md  READY_FOR_DEPLOYMENT.md  RUN_SERVER.sh  SCHEMA_MIGRATION_LEAD_ADDRESS.md  SECURITY_AND_SCHEMA_FIXES.md  SECURITY_HARDENING.md  TESTING_COMPLETE.md  WEALTH_ASSESSMENT_EXAMPLE.json  WORLD_CLASS_COMPARISON.md
examples/: batch_enrich.rs  import_json_to_db.rs
migrations/: 001_hardening_constraints.sql  002_create_webhook_events.sql  003_google_ads_leads.sql  004_fix_orphaned_data.sql  005_analytics_mvs.sql  006_audit_trail.sql  007_implement_party_model.sql  008_backfill_legacy_entities.sql  008_party_model_backfill.sql  010_migrate_financials_to_jsonb.sql  011_add_party_ids_to_transactions.sql  012_drop_entity_foreign_keys.sql  013_drop_unused_party_contact_tables.sql  014_archive_entity_tables.sql  015_drop_archived_entity_tables.sql  016_archive_entities_table.sql  017_rebuild_mv_entity_enriched.sql  018_drop_app_and_dim_schemas.sql
scripts/: enrich_batch.sh  retry_failed_cpfs.sh  test_all_modules.sh  test_c2s_create_lead.sh  test_gateway_integration.sh  test_google_webhook.sh  test_modules.sh  test_webhook.sh
src/: cache_validator.rs  circuit_breaker.rs  config.rs  db.rs  db_storage.rs  enrichment.rs  errors.rs  gateway_client.rs  google_ads_handler.rs  google_ads_models.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs  webhook_handler.rs  webhook_models.rs
tests/: enrichment_tests.rs  integration_mocked.rs  load-test.js  property_tests.rs  smoke-test.js  storage_integration.rs
(+76 files in other folders)
