[package]
name = "rust-c2s-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
bigdecimal = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Environment & Config
dotenvy = "0.15"
dotenv = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Phone number validation (Brazilian numbers)
phonenumber = "0.3"

# OpenAPI/Swagger UI
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
wiremock = "0.6"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
